--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,5 @@ tomli==2.0.1
 typing_extensions==4.4.0
 uvicorn==0.20.0
 uvloop==0.17.0
-watchfiles==0.19.0
+#watchfiles==0.19.0
 websockets==11.0.3
