--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ sniffio==1.3.0
 starlette==0.22.0
 tomli==2.0.1
 typing_extensions==4.4.0
-uvicorn==0.14.0
+uvicorn==0.20.0
 uvloop==0.17.0
-#watchfiles==0.19.0
-websockets==11.0.3
+watchfiles==0.18.1
+websockets==10.4
